# cpmsClient

./: .coding-ci.yml  .gitignore  .oxlintrc.json  AGENTS.md  DESIGN.md  README.md  job-logs.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/: CI-TROUBLESHOOTING.md
.github/workflows/: build-release.yml  build.yml
client-tauri1/: package.json  vite.config.ts
client-tauri1/src-shims/tauri/: core.ts  dpi.ts  event.ts  webviewWindow.ts  window.ts
client-tauri1/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.linux.legacy.conf.json
client-tauri1/src-tauri/.cargo/: config.toml
client-tauri1/src-tauri/src/: event_bridge.rs  iframe.rs  lib.rs  printclient.rs  socket.rs  token_refresh.rs  window.rs
client-tauri1/src-tauri/src/hub/: commands.rs  crypto_service.rs  events.rs  mod.rs  models.rs  network_service.rs  preferences.rs  print_service.rs  socket_server.rs  usb_service.rs
client-tauri1/src-tauri/src/services/: commands.rs  events.rs  log_service.rs  mod.rs  models.rs  preferences.rs  token_store.rs
client-tauri2/: package.json
client-tauri2/scripts/: build.js
client-tauri2/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
client-tauri2/src-tauri/capabilities/: default.json
client-tauri2/src-tauri/src/: event_bridge.rs  iframe.rs  lib.rs  models.rs  printclient.rs  single_instance.rs  socket.rs  window.rs
client-tauri2/src-tauri/src/hub/: commands.rs  http_service.rs  print_service.rs  socket_server.rs
client-tauri2/src-tauri/src/services/: commands.rs  crypto_service.rs  events.rs  http_service.rs  log_service.rs  network_service.rs  preferences.rs  print_service.rs
client-ui/: .oxfmtrc.json  index.html  package.json  tsconfig.json  tsconfig.oxlint.json  uno.config.ts  vite.config.ts
client-ui/src/: App.vue  main.ts
client-ui/src/api/cpms/: client.ts
client-ui/src/composables/: useAppError.ts  useAppNotification.ts  useClientEventBridge.ts  useClientLogBridge.ts  useClientNotificationBridge.ts  useDesktopNotificationBridge.ts
client-ui/src/stores/: app.ts  hubPrint.ts  log.ts  network.ts  task.ts  user.ts
client-ui/src/types/: auto-imports.d.ts  components.d.ts
client-ui/src/utils/: hubBridge.ts
scripts/: build.js
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/hub/: commands.rs  events.rs  mod.rs  preferences.rs  print_service.rs  usb_service.rs
src/api/localService/: client.ts
src/api/request/: config.ts
src/api/tauri/: desktop.ts  events.ts  external.ts  hub-client.ts  print.ts  socket.ts  usb.ts  version.ts
src/components/common/: DesktopNotificationHost.vue
src/composables/: useClientRuntimeBridge.ts  useIframeContainer.ts  useIframePayloadBridge.ts
src/router/: index.ts
src/stores/: app.ts  hubAuth.ts  hubServer.ts  runtime.ts  task.ts
src/types/: components.d.ts
src/types/app/: runtime.ts
src/types/hub/: job.ts  printer.ts
src/utils/: hubBridge.ts
src/views/home/: index.vue
(+29 files in other folders)
